l10n: add a new snippet for about:home
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105628 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/snippets.lang
+++ b/ach/snippets.lang
@@ -1,3 +1,6 @@
+# these text snippets are mostly used on about:home
+
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Ter Firefox kan mo keken ma in ibi ceto ie! Firefox ma okati macok coki manyen pi Anroid tye makome ci tye atera piri me nongo yom cwiny ie. <a href="%s">Nong ne kombedi</a>.
 
@@ -120,3 +123,9 @@ Tic ki Firefox   ikom komiuta mapol? Itwero Itwero keto gin marwata patpat kombe
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
