--- a/as/snippets.lang
+++ b/as/snippets.lang
@@ -125,3 +125,7 @@ Firefox ক কেইবাটাও কমপিউটাৰত ব্যৱহ
 দ্ৰুত, দ্ৰুত, দ্ৰুত। <a %s>Android ৰ বাবে Firefox এ এইমাত্ৰ এটা ডাঙৰ উন্নয়ন পালে</a>। আমাক শব্দ বিস্তাৰ কৰাত সহায় কৰক।
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
