--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -125,3 +125,7 @@ Invita a los tos collacios a que vean les carauterístique que va tener Firefox 
 Rápido, rápido, rápido. <a %s>Firefox p'Android acaba d'anovase</a>. Ayúdanos a difundilo.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
