--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -125,3 +125,7 @@ Arverañ a rit Firefox war meur a urzhiataer ? Bremañ e c'hellit goubredañ hoc
 Herrek, herrek, herrek. <a %s>Un hizivadur pouezus zo bet evit handelv Android eus Firefox</a>. Skoazellit deomp reiñ da c'houzout ar c'heloù.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
