--- a/bs/snippets.lang
+++ b/bs/snippets.lang
@@ -125,6 +125,10 @@ Koristite Firefox na više računara? Sada možete sinhronizovati vaše add-one 
 Brz, brz, brz. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a>. Pomozite nam da proširimo vijest.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Pretražujte Tweetove, prijatelje ili aktuelne teme direktno iz trake za pretragu. Kliknite na ikonicu za pretragu u gornjem desnom uglu Firefoxa i izaberite Twitter.
 
