--- a/cs/snippets.lang
+++ b/cs/snippets.lang
@@ -125,3 +125,7 @@ Používáte Firefox na více počítačích? Nyní máte možnost napříč nim
 Rychlý, rychlý, rychlý. <a %s>Firefox pro Android byl právě výrazně vylepšen</a>. Dejte o tom vědět svému okolí.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
