--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -125,3 +125,7 @@ Môsz Firefoksa na wicy jak jednym kòmpùtrze? Terô mòżesz synchronizowac do
 Chùtczi, chùtczészi. <a %s>Firefox dlô Androida tëli co òstał zaktualniony</a>. Pòmòżë nama ò tim rozgłosëc.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
