--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -125,3 +125,7 @@ Bruger du Firefox på flere computere? Nu kan du synkronisere dine tilføjelser 
 Lynhurtig! <a %s>Firefox til Android har netop fået en stor opgradering</a>. Fortæl det til dine venner.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
