--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -125,6 +125,10 @@ Verwenden Sie Firefox auf mehreren Rechnern? Jetzt können Sie Ihre Add-ons zwis
 Schnell, schnell, schnell. <a %s>Firefox für Android hat gerade ein großes Upgrade erhalten</a>. Helfen Sie uns, die Botschaft zu verbreiten.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Tolle Preise! Hollywood-Richter! Ausrufezeichen! <a href="%">Machen Sie mit bei Firefox Flicks</a>, dem weltweiten Videowettbewerb, um unsere Geschichte zu erzählen, oder stimmen Sie für Ihre Favoriten ab!
 
