--- a/el/snippets.lang
+++ b/el/snippets.lang
@@ -125,3 +125,7 @@
 Ακόμα πιο γρήγορος! <a %s> ο Firefox για Android μόλις αναβαθμίστηκε σημαντικά</a>. Βοηθήστε μας να το διαδώσουμε.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
