--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -125,3 +125,7 @@ Invitá a tus amigos a probar las próximas funcionalidades de Firefoxs. <a href
 Rápido, rápido, rápido. <a %s>Firefox para Android acaba de tener una gran actualización</a>. Ayudanos a difundirlo.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
