--- a/es-MX/snippets.lang
+++ b/es-MX/snippets.lang
@@ -124,3 +124,8 @@ Invita a tus amigos a que vean las características que tendrá Firefox en el fu
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Rápido, rápido, rápido. <a %s>Firefox para Android acaba de ser actualizado</a>. Ayúdanos a difundirlo.
 
+
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
