--- a/et/snippets.lang
+++ b/et/snippets.lang
@@ -125,3 +125,7 @@ Kasutad Firefoxi mitmel arvutil? Nüüd saad ka paigaldatud lisasid sünkronisee
 Kiire. Väga kiire. <a %s>Firefoxi Androidi versioonile tuli välja tähtis uuendus</a>. Aita meil uudist levitada.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
