--- a/fa/snippets.lang
+++ b/fa/snippets.lang
@@ -125,3 +125,7 @@
 سریع، سریع، سریع. <a %s>فایرفاکس برای اندروید بروزرسانی‌ای تازه دریافت کرده است</a>. به ما کمک کنید تا تمام دنیا را خبر کنید.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
