--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -1,3 +1,6 @@
+# these text snippets are mostly used on about:home
+
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Nawor Firefox ɗo njahataa fof! Firefox cakkitiiɗo mo Android ena ɗoo hebii tolbec ngam weytaare maa. <a href="%s">Heɓ ɗum jooni.</a>
 
@@ -120,3 +123,9 @@ Aɗa huutoroo Firefox e ordianteeruuji keewɗi? Jooni aɗa waawi sanngoɗinde ɓ
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Njaawee, njaawee, njaawee. <a %s>Firefox mo Android heɓii kesɗitinal mawngal</a>. Wallu min saaktude kabaaru oo.
+
+
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
