--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -125,6 +125,10 @@ Vous utilisez Firefox sur plusieurs ordinateurs&nbsp;? Il vous est maintenant po
 Rapide et surtout… rapide&nbsp;! <a %s>Firefox pour Android vient de bénéficier d'une mise à jour majeure</a>. Aidez-nous à faire passer le message.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Des grands prix&nbsp;! Des juges hollywoodiens&nbsp;! Des points d'exclamation&nbsp;! Participez à <a href="%">Firefox Flicks</a>, le concours vidéo mondial pour raconter notre histoire, ou votez pour vos vidéos préférées&nbsp;!
 
