--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -125,6 +125,10 @@ An mbaineann tú úsáid as Firefox ar ríomhairí éagsúla? Anois is féidir l
 Sciobtha, sciobtha, sciobtha. <a %s>Fuair Firefox ar Android nuashonrú mór</a>. Cabhraigh linn an focal a scaipeadh.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Déan cuardach ar thuíteanna, ar chairde, nó ar thopaici i mbéal an phobail ón mbarra cuardaigh. Cliceáil an deilbhín cuardaigh ag barr an bhrabhsálaí ar dheis agus roghnaigh Twitter.
 
