--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -125,3 +125,7 @@ Usa o Firefox en varios equipos? Agora pode sincronizar os complementos en todos
 Déase présa. <a %s>Firefox para Android ten unha gran anovación</a>. Axúdenos a difundilo.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
