--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -125,6 +125,10 @@ Koristite Firefox na više računala? Sada možete sinkronizirati dodatne izmeđ
 Brzo, brzo, brzo. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a>. Pomognite nam proširiti novost.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Tražite tweetove, prijatelje ili popularne teme izravno iz polja za pretragu. Kliknite na ikonu pretraživača u gornjem desnom dijelu Firefoxa i odaberite Twitter.
 
