--- a/is/snippets.lang
+++ b/is/snippets.lang
@@ -125,3 +125,7 @@ Ertu að nota Firefox á mörgum tölvum? Núna geturðu samstillt viðbæturnar
 Hraði, hraði, hraði. <a %s>Firefox fyrir Android var að fá stóra uppfærslu</a>. Hjálpaðu okkur með því að láta aðra vita.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
