--- a/it/snippets.lang
+++ b/it/snippets.lang
@@ -125,3 +125,7 @@ Utilizzi Firefox su diversi computer? Ora puoi sincronizzare anche i componenti 
 Veloce, veloce, veloce. <a %s>È disponibile una versione profondamente rinnovata di Firefox per Android </a>. Aiutaci a diffondere la notizia.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
