--- a/ja/snippets.lang
+++ b/ja/snippets.lang
@@ -125,6 +125,10 @@ Using Firefox on several computers? Now you can synchronize your add-ons across 
 Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}ツイート、友人、旬の話題を検索バーから直接検索できます。Firefox の画面右上にある検索エンジンのアイコンをクリックして Twitter を選ぶだけです。
 
