--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -125,3 +125,7 @@ T'adêuvi o Firefox in tànti computer? Òua ti peu sincronizâ i teu conponént
 Velôce! E méscite, ti me pâ rinbanbîo! <a %s>Firefox pe Android o l'à fæto 'n gràn agiornaménto</a>. Aigiùttine a fâlo savéi in gîo.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
