--- a/lt/snippets.lang
+++ b/lt/snippets.lang
@@ -125,3 +125,7 @@ Naudojatės „Firefox“ keliuose kompiuteriuose? Dabar galite tarp jų sinchro
 Sparti, labai sparti! <a %s>„Firefox“ naršyklė „Android“ įrenginiams ką tik žymiai atnaujinta.</a> Pasidalinkite šia naujiena su kitais.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
