--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -125,3 +125,7 @@ Izmanto Firefox no vairākiem datoriem? Tagad Tu vari sinhronizēt papildinājum
 Ātrs, ātrs, ātrs. <a %s>Firefox Android versijai lieli uzlabojumi</a>. Palīdzi un padod šo ziņu tālāk.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
