--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -125,3 +125,7 @@
 लवकर, लवकर, लवकर. <a %s>अँड्राइडकरीता फायरफॉक्समध्ये मोठी सुधारणा आहे</a>. प्रसारकरीता आमची मदत करा.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
