--- a/nb-NO/snippets.lang
+++ b/nb-NO/snippets.lang
@@ -125,3 +125,7 @@ Bruker du Firefox på flere datamaskiner? Nå kan du synkronisere utvidelser på
 Rask, rask, rask. <a %s>Firefox for Android fikk nettopp en stor oppgradering</a>. Hjelp oss å spre ryktet.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
