--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -125,3 +125,7 @@ Gebruikt u Firefox op meerdere computers? U kunt er nu add-ons tussen synchronis
 Snel, snel, snel. <a %s>Firefox voor Android heeft net een grote upgrade gehad</a>. Help ons en vertel het door.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
