--- a/pa-IN/snippets.lang
+++ b/pa-IN/snippets.lang
@@ -125,3 +125,7 @@ Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of w
 ਤੇਜ਼, ਤੇਜ਼, ਤੇਜ਼। <a %s>ਐਡਰਾਇਡ ਲਈ ਫਾਇਰਫਾਕਸ ਨੂੰ ਵੱਡੇ ਪੱਧਰ ਉੱਤੇ ਅੱਪਗਰੇਡ ਕੀਤਾ ਗਿਆ ਹੈ।</a>। ਸੰਸਾਰ ਵਿੱਚ ਫੈਲਾਉਣ ਲਈ ਸਾਡੀ ਮੱਦਦ ਕਰੋ।
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
