--- a/rm/snippets.lang
+++ b/rm/snippets.lang
@@ -125,3 +125,7 @@ Utiliseschas ti Firefox sin differents computers? Ussa pos ti sincronisar tes su
 Spert, spert, spert. <a %s>Firefox per Android ha gist retschavì ina gronda actualisaziun</a>. Ans gida da derasar questa infurmaziun.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
