--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -125,6 +125,10 @@ Firefox для Android теперь оптимизирован для работ
 Быстрый, шустрый и улётный. <a %s>Firefox для Android только что получил большое обновление</a>. Помогите нам рассказать о нём миру.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Великолепные призы! Судьи из Голливуда! Восклицательные знаки! <a href="%">Примите участие в Firefox Flicks</a>, глобальном конкурсе видео, чтобы рассказать нашу историю, или проголосовать за любимые видео!
 
