--- a/sk/snippets.lang
+++ b/sk/snippets.lang
@@ -125,3 +125,7 @@ Používate Firefox na viacerých počítačoch? Teraz máte možnosť medzi nim
 Rýchly, rýchly, rýchly. <a %s>Firefox pre Android bol výrazne vylepšený</a>. Dajte o tom vedieť svojmu okoliu.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
