--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -125,6 +125,10 @@ Uporabljate Firefox na večih računalnikih? Dodatke lahko sedaj sinhronizirate 
 Hitrost! <a %s>Firefox za Android je pravkar dobil veliko posodobitev</a>. Pomagajte nam širiti vest.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Iščite po tvitih, med prijatelji in novimi temami v vrstici za iskanje. Kliknite v Firefoxu desno zgoraj na ikono za iskanje in izberite Twitter.
 
