--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -125,6 +125,10 @@ E përdorni Firefox-in në disa kompjutera? Tani mundeni të njëkohësoni shtes
 Shpejt, shpejt, shpejt. <a %s>Firefox-i për Android sapo u përditësua fuqishëm</a>. Na ndihmoni të përhapim lajmin.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Çmime të vyera! Anëtarë jurie nga Hollivudi! Pika çuditëse! <a href="%">Merrni Pjesë te Firefox Flicks</a>, një garë mbarëbotërore videosh që të tregojnë historinë tonë, ku mund të votoni për të parapëlqyerën tuaj!
 
