--- a/sr/snippets.lang
+++ b/sr/snippets.lang
@@ -40,6 +40,7 @@
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
 <a href="%s">Преузмите Фајерфокс на Вашем Андроид таблету</a> и ставите моћ веба право у Ваше руке. Набавите га сада.
 
+
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
 Држите Ваше прикључке ажурним како би остали сигурни на интернету са <a href="%s">провером прикључака</a>.
 
@@ -103,6 +104,7 @@
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
 Желите да поделите Ваш утисак? <a href="%">Сазнајте како</a> и помозите да учинимо следећу верзију још бољом.
 
+
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
 Корисници Фајерфокс бете: Не заборавите да <a href="%">поделиде Ваше утиске</a> како би помогли нама да урадимо завршна подешавања за нашу следећу верзију.
 
@@ -121,5 +123,9 @@
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Брз, брз, брз. <a %s>Фајерфокс за Андроид је добио велику надоградњу</a>. Помозите нам да проширимо реч.
+
+
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 
 
