--- a/sv-SE/snippets.lang
+++ b/sv-SE/snippets.lang
@@ -125,6 +125,10 @@ Använder du Firefox på flera datorer? Nu kan du synkronisera dina tillägg mel
 Snabbt, snabbt, snabbt. <a %s>Firefox för Android har precis uppgraderats rejält</a>! Berätta det för alla du träffar.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 Fantastiska priser! Hollywooddomare! Utropstecken! <a href="%">Anmäl dig till Firefox Flicks</a>, den globala videotävlingen, med din film som berättar om oss – eller rösta på dina favoriter!
 
