--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -125,3 +125,7 @@ Defnyddio Firefox ar nifer o gyfrifiaduron? Nawr mae modd cydweddu eich ychwaneg
 Cyflym, cyflym, cyflym. <a %s>Mae Firefox ar gyfer Android newydd gael diweddariad mawr</a>. Cofiwch ddweud wrth pawb.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
