--- a/en-GB/snippets.lang
+++ b/en-GB/snippets.lang
@@ -122,3 +122,7 @@ Using Firefox on several computers? Now you can synchronize your add-ons across 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 
+
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
