--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -125,3 +125,7 @@ Invitu geamikojn provi estontajn trajtojn de Firefox. <a href="%">Iĝu kunlabora
 Rapida, rapida, rapida. <a %s>Firefox por Android ĵus ricevis grandan ĝisdatigon</a>. Helpu nin diskonigi tion.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
