--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -125,6 +125,10 @@ Invita a tus amigos a que vean las características que tendrá Firefox en el fu
 Rápido, rápido, rápido. <a %s>Firefox para Android acaba de ser actualizado</a>. Ayúdanos a difundirlo.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Busca tuits, amigos o temas del momento desde la barra de búsquedas. Haz clic en el icono de búsqueda, en la parte superior derecha de Firefox, y selecciona Twitter.
 
