--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -1,3 +1,6 @@
+# these text snippets are mostly used on about:home
+
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Thoir leat Firefox àite sam bith dhan dèid thu! Tha an tionndadh as ùire de Firefox airson Android deas ri do làimh a-nis. <a href="%s">Faigh e an-dràsta.</a>
 
@@ -120,3 +123,9 @@ A' cleachdadh Firefox air iomadh coimpiutair? 'S urrainn dhut na tuilleadain aga
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 Luath, luath, luath. <a %s>Tha Firefox airson Android dìreach air àrdachadh mòr fhaighinn</a>. Nach sgaoil thu an naidheachd?
+
+
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
