--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -125,3 +125,7 @@ Több számítógépen is használ Firefoxot? Mostantól szinkronizálhatja a ki
 Gyorsan, gyorsan, gyorsan. Most jött ki a <a %s>Firefox for Android legfrissebb verziója</a>. Segíts, hogy mindenki megtudja!
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
