--- a/hy-AM/snippets.lang
+++ b/hy-AM/snippets.lang
@@ -125,3 +125,7 @@ Firefo Բետայի օգտվողները. Մի մոռացեք <a href="%">հայ
 Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
