--- a/zh-CN/snippets.lang
+++ b/zh-CN/snippets.lang
@@ -125,6 +125,10 @@ Using Firefox on several computers? Now you can synchronize your add-ons across 
 Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 
 
+;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 
