--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -126,7 +126,7 @@ Schnell, schnell, schnell. <a %s>Firefox für Android hat gerade ein großes Upg
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox verfügt über neue Funktionen, damit Sie sich möglichst schnell Ihrer nächsten Aufgabe widmen können! <a href="%">Erfahren Sie mehr aus diesem Video.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
