--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -2,62 +2,60 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurra! Ihr Firefox ist aktuell.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Ihr Firefox ist veraltet.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Aus Sicherheitsgründen empfehlen wir Ihnen, auf die <a href="{url}">neueste und beste Version</a> zu aktualisieren.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Sie verwenden eine unbekannte Version von Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Aus Sicherheitsgründen empfehlen wir Ihnen, die <a href="{url}">neueste und beste Version</a> herunterzuladen.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Widmen Sie sich Ihrer nächsten Aufgabe<br/>schneller als je zuvor
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Sehen Sie sich an, wie Sie mit den neuen Funktionen von Firefox schneller und effizienter surfen können.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Erfahren Sie mehr über die <a href="{url}">Neuer-Tab-Funktion »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Erfahren Sie mehr über unsere <a href="{url}">neu gestaltete Homepage »</a>
 
 
 ;Keep in touch
-Keep in touch
+Bleiben Sie in Verbindung
 
 
 ;Keep it moving
-Keep it moving
+Bleiben Sie in Bewegung
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Holen Sie sich Firefox » <b>für Android</b>
 
 
 ;Keep it going
-Keep it going
+Verbreiten Sie die Nachricht
 
 
 ;Join Mozilla
-Join Mozilla
+Machen Sie mit bei Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Die Arbeit, aus der der Android Robot reproduziert wurde, wurde entwickelt und <a href="%s">weitergegeben von Google</a> und gemäß der Bedingungen der <a href="%s">Creative Commons 3.0 Attribution License</a> verwendet.
