l10n:lij new string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105642 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/whatsnew.lang
+++ b/lij/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Ghe sémmo! O teu Firefox o l'é agiornòu.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+O teu Firefox o no l'é agiornòu.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Pe ragioìn de seguéssa, te consegémmo de agiornâte a <a href="{url}">l'ùrtima mêgio vesción</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Ti gh'æ 'na versción de Firefox che mi mîga a conóscio.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Pe ragioìn de seguéssa, te consegémmo de descaregâ <a href="{url}">l'ùrtima mêgio vesción</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Vànni a-o teu pròscimo travàggio<br/>ciù velôce che mâi
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Véddi cómme e nêuve caraterìstiche de Firefox te agiùtan a navegâ ciù velôce e inte 'n mòddo ciù eficiénte.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Inpâra de ciù in sci <a href="{url}">Nêuvi féuggi »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Inpâra de ciù in sciâ nòstra <a href="{url}">pàgina prinçipâ redizegnâ »</a>
 
 
 ;Keep in touch
-Keep in touch
+Stànni in contàtto
 
 
 ;Keep it moving
-Keep it moving
+Pòrtilo deræ
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Pìggite o Firefox » <b>pe Android</b>
 
 
 ;Keep it going
-Keep it going
+Vànni in gîo
 
 
 ;Join Mozilla
-Join Mozilla
+Unìscite a Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+O Android Robot o l'é stæto riprodûto da 'n travàggio creòu e <a href="%s">condivîzo da Google</a> e adêuviòu in acòrdo a-i tèrmini descrîti into <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
