l10n:lij new string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105643 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -126,6 +126,6 @@ Velôce! E méscite, ti me pâ rinbanbîo! <a %s>Firefox pe Android o l'à fæto
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox o l'à de nêuve caraterìstiche pe fâte fâ e pròscime operaçioìn ciù velôci che mâi! <a href="%">Véddite o vìdeo pe savéine de ciù.</a>
 
 
