German translation of video_fx13.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105659 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/videos/video_fx13.lang
+++ b/de/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Was neu ist in Firefox] Mit dem neuen Firefox kommt man jetzt einfach und schneller dahin, wo man hinmöchte.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Mit der neu gestalteten Startseite können Sie jetzt schnell auf Ihre am häufigsten genutzten Menüeinstellungen zugreifen und dorthin navigieren.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Wie Downloads, Lesezeichen, Chronik, Add-ons, Sync und Einstellungen,
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Neuer-Tab-Seite] Wir haben auch Ihrer Neuer-Tab-Seite Verbesserungen hinzugefügt. 
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Mit der Neuer-Tab-Seite können Sie jetzt einfach Ihre zuletzt und am häufigsten besuchten Websites mit einem Klick aufrufen.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Um die Neuer-Tab-Seite zu verwenden, erstellen Sie einen neuen Tab, indem Sie auf das „+“ oben in Ihrem Browser klicken.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Die Neuer-Tab-Seite zeigt dann Vorschaugrafiken Ihrer zuletzt und am häufigsten besuchten Websites aus der Chronik Ihrer Intelligenten Adressleiste.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Sie können Ihrer Neuer-Tab-Seite anpassen, indem Sie die Vorschaugrafiken verschieben, um die Reihenfolge zu ändern.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klicken Sie auf das Stecknadel-Symbol um die Website zu verankern, oder auf die Schaltfläche „X“, um eine Website zu entfernen.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Sie können auch auf das „Gitter“-Symbol rechts oben auf der Seite klicken, um zur leeren Neuer-Tab-Seite zurückzukehren.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Holen Sie sich jetzt den neuesten Firefox und verwenden Sie ab heute diese neuen Funktionen!
