Translation of Firefox Whatsnew page video subtitles
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105660 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -34,7 +34,7 @@ Erfahren Sie mehr über die <a href="{url}">Neuer-Tab-Funktion »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Erfahren Sie mehr über unsere <a href="{url}">neu gestaltete Homepage »</a>
+Erfahren Sie mehr über unsere <a href="{url}">neu gestaltete Startseite »</a>
 
 
 ;Keep in touch
