--- a/hr/whatsnew.lang
+++ b/hr/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hura! Vaš Firefox je ažuriran.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Vaš Firefox nije ažuriran.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Zbog sigurnosnih razloga, preporučamo da obavite nadogradnju na <a href="{url}">najnoviju i najbolju inačicu</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Koristite nepoznatu inačicu Firefoxa.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Zbog sigurnosnih razloga, preporučamo da preuzmete <a href="{url}">najnoviju i najbolju inačicu</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Prijeđite na svoj idući zadatak<br/>brže no ikada
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Saznajte kako vam nove mogućnosti u Firefoxu omogućuju brže i efikasnije surfanje.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Saznajte više o <a href="{url}">novoj mogućnosti kartica »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Saznajte više o našoj <a href="{url}">rededizajniranoj početnoj stranici »</a>
 
 
 ;Keep in touch
-Keep in touch
+Ostanite u kontaktu
 
 
 ;Keep it moving
-Keep it moving
+Budite u pokretu
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Preuzmite Firefox » <b>za Android</b>
 
 
 ;Keep it going
-Keep it going
+Samo nastavite
 
 
 ;Join Mozilla
-Join Mozilla
+Pridružite se Mozilli
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robot je reproduciran iz rada kojeg je <a href="%s">Google podijelio</a>. Rad je korišten u skladu s uvjetima navedenima u <a href="%s">Creative Commons 3.0 Attribution licenci</a>.
 
 
