Translated snippets.lang to Croatian
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105665 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -126,7 +126,7 @@ Brzo, brzo, brzo. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox ima nove mogućnosti koje će vas do vašeg idućeg zadatka dovesti brže no ikada! <a href="%">Pogledajte video da biste saznali više.</a>
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
