--- a/hr/videos/video_fx13.lang
+++ b/hr/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Što je novo u Firefoxu] S najnovijim Firefoxom možete doći gdje god želite još brže i lakše.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+S redizajniranom početnom stranicom, sada možete jednostavno pristupiti vašim često pristupanim opcijama u izborniku.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Poput preuzimanjima, zabilješkama, povijesti, dodacima, sinkronizaciji i postavkama.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Stranica nove kartice] Također smo dodali poboljšanja na stranicu nove kartice.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Sa stranicom nove kartice, sada možete jednostavno pristupiti vašim nedavno i često posjećenim stranicama uz samo jedan klik mišem.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Da biste započeli koristiti stranicu nove kartice, otvorite novu karticu klikom na '+' na vrhu vašeg preglednika.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Stranica nove kartice će sada prikazati sličice stranica koje ste nedavno posjetili i koje često posjećujete.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Stranicu nove kartice možete prilagoditi povlačenjem sličica i slaganjem prema željenom redoslijedu.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Kliknite na pribadaču da biste zaključali stranicu na trenutnu poziciju ili na tipku 'X' da biste je uklonili.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Također možete kliknuti na ikonu 'mreže' u gornjem desnom dijelu stranice da biste se vratili na praznu stranicu nove kartice.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Preuzmite najnoviji Firefox odmah i počnite koristiti nove mogućnosti danas!
