--- a/sq/videos/video_fx13.lang
+++ b/sq/videos/video_fx13.lang
@@ -1,42 +1,37 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Ç'ka të Re te Firefox-i] Tani, me Firefox-in më të ri, është më e lehtë dhe më e shpejtë të hidheni atje ku doni.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-
+Me Faqen Hyrëse të rihartuar tani mundeni të hyni dhe të lëvizni lehtësisht nëpër zërat më të përdorur të menuve.
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Fjala vjen, shkarkimet, faqerojtësit, historikun, shtesat, njëkohësimin dhe rregullimet.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
-
+[Faqe Skede e Re] Kemi shtuar përmirësime edhe te faqja jonë Skedë e Re.
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-
+Me faqen e Skedës së Re, mundeni të kaloni lehtësisht me një klikim te site-et më të vizituar ose ata të vizituar së fundmi.
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-
+Që të filloni të përdorni faqen Skedë e Re, krijoni një skedë të re duke klikuar shenjën '+' në krye të shfletuesit tuaj.
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Faqja Skedë e Re do të shfaqë prej Historikut tuaj miniatura të site-eve më të vizituar dhe të atyre të vizituar së fundmi.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
-
+Skedën e Re mund ta personalizoni duke i tërhequr miniaturat dhe u ndryshuar vendin sipas dëshirës.
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klikoni mbi pineskën që ta ngulni site-in te një vend i caktuar i faqes, ose mbi butonin 'X' për ta hequr një site.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Mundeni gjithashtu të klikoni ikonën 'rrjetë' në cepin e sipërm djathtas të faqes që të riktheni modelin e vjetër të faqes zë zbrazët për Skedën e Re.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Merreni Firefox-in e fundit që tani dhe filloni t'i përdorni që sot këto veçori të reja.
